core/c/fanout.h

// ---------------------------------------------------------------------------
// Public types
// ---------------------------------------------------------------------------

/// Claim result record — reader-owned and identity-stable, mutated in place
/// per claim so the hot path allocates nothing (Law 2). Read the fields
/// synchronously after weft_fanout_claim(); do not retain the record across
/// claims expecting a snapshot.
typedef struct {
    bool fresh;         ///< A new consistent frame was claimed this tick
    uint64_t seq;       ///< Frame seq now held (last consistent if !fresh)
    uint64_t dropped;   ///< Frames completed without this reader ever observing them
} weft_fanout_claim_t;
/// Advisory reader statistics (AXIOM T: advisory, never a correctness
/// reference). Field names mirror the TS port's FanoutReaderStats.
typedef struct {
    uint64_t reads;                 ///< Total claim() calls
    uint64_t fresh;                 ///< Claims that returned a fresh frame
    uint64_t drops;                 ///< Sum of `dropped` across fresh claims
    uint64_t skipped_mid_overwrite; ///< Ticks skipped: target slot mid-overwrite, no newer frame
    uint64_t torn_exhausted;        ///< Claims that exhausted the bounded retry
} weft_fanout_stats_t;
/// The fan-out ring: one writer + N readers, M pre-allocated slots, one
/// publication point (latestSeq). Field discipline mirrors the kernel:
///   - ring/ctrl: shared; synchronized ONLY by the stamp protocol above.
///   - w_seq/w_slot: WRITER-PRIVATE (single writer by contract).
///   - owns_ring: set by init, cleared by attach; only destroy consults it.
typedef struct weft_fanout {
    uint8_t* ring;             ///< Single allocation (or foreign memory if attached)
    _Atomic uint64_t* ctrl;    ///< ring + 0: [latestSeq, publishes, slotSeq[0..M)]
    size_t payload_bytes;      ///< Immutable after init; multiple of 4
    unsigned slot_count;       ///< Immutable after init; [2, WEFT_FANOUT_MAX_SLOTS]
    uint64_t w_seq;            ///< Writer-private frame counter (0 = no begin yet)
    unsigned w_slot;           ///< Writer-private slot index of the current begin()
    uint8_t* w_cursor;         ///< Cached payload cursor of the current begin()
    int owns_ring;             ///< 1 = init allocated it (destroy frees); 0 = attached
} weft_fanout_t;
/// A reader bound to a ring (any ring — same process, or foreign memory
/// produced by another port). Each reader owns its pre-allocated copy buffer
/// and its claim record; nothing is shared between readers.
typedef struct weft_fanout_reader {
    uint8_t* ring;             ///< The ring base (borrowed; caller keeps it alive)
    _Atomic uint64_t* ctrl;    ///< ring + 0
    size_t payload_bytes;      ///< Immutable after init; multiple of 4
    unsigned slot_count;       ///< Immutable after init
    uint32_t* target;          ///< Pre-allocated copy buffer (payload_bytes/4 words)
    const _Atomic uint32_t* slot_words[WEFT_FANOUT_MAX_SLOTS]; ///< Cached slot views
    uint64_t last_seq;         ///< Last frame seq held consistent (0 = none yet)
    weft_fanout_claim_t rec;   ///< Identity-stable claim record (mutated per claim)
    uint64_t n_reads, n_fresh, n_drops, n_skip, n_exhausted; ///< Reader-private stats
} weft_fanout_reader_t;
// ---------------------------------------------------------------------------
// Geometry
// ---------------------------------------------------------------------------

/// Total ring size in bytes for the given geometry (the interop contract —
/// identical to core/ts/fanout.ts: 16 + 8*slot_count + slot_count*payload_bytes).
size_t weft_fanout_ring_bytes(size_t payload_bytes, unsigned slot_count);
/// Begin the next frame: bumps the frame counter, INVALIDATES the target
/// slot's stamp (SeqCst store + SeqCst fence — property P1 above) and
/// returns the slot's payload cursor. The cursor stays valid until the next
/// begin(). Writes through it are visible to readers only after publish().
/// Zero allocation. Not a snapshot — the live slot.
uint8_t* weft_fanout_begin(weft_fanout_t* f);
/// Fill the begun slot from src via relaxed atomic u32 word stores (len must
/// be a multiple of 4 and <= payload_bytes). This is the race-free fill path
/// (strict C11 + TSAN-clean); the raw cursor from begin() is the plain-store
/// production path under the bracket discipline. Returns words written, or
/// -1 on bad len / no begin(). Zero allocation.
int weft_fanout_fill(weft_fanout_t* f, const void* src, size_t len);
/// Publish the begun frame: stamp the slot (Release), flip latestSeq (Release
/// — the publication point), bump publishes (Relaxed telemetry). Returns the
/// published frame seq, or 0 if no begin() ever ran (a detectable no-op, not
/// an error — same as the TS port). Zero allocation.
uint64_t weft_fanout_publish(weft_fanout_t* f);
/// Heap-allocate + init in one call (calloc; returns NULL on bad geometry or
/// OOM). WHY THIS EXISTS: FFI-finalizer discipline. Dart's NativeFinalizer
/// (packages/flutter_weft) and the JNI bridge (android/weft-core) both need
/// "allocate" and "release" to be ONE C call each, so a foreign runtime's GC
/// backstop can never free the struct while the ring it owns is still alive —
/// the exact hazard a split calloc/destroy pair invites. weft_fanout_free
/// has the void(void*) signature NativeFinalizer requires.
weft_fanout_t* weft_fanout_new(size_t payload_bytes, unsigned slot_count);
/// weft_fanout_destroy + free the struct. NULL-safe. Idempotent by
/// destruction of the handle (the caller drops it).
void weft_fanout_free(weft_fanout_t* f);
/// The ring base pointer (byte-compatible layout contract; see fanout.h
/// header). For FFI runtimes that read the advisory ctrl words (latestSeq,
/// publishes) directly from the documented offsets — unsynchronized reads,
/// AXIOM T advisory only. NULL if not initialized.
const void* weft_fanout_ring(const weft_fanout_t* f);
/// Claim the freshest completed frame into this reader's buffer. Never
/// blocks, never spins unboundedly, never fails: a tick with no consistent
/// newer frame returns fresh=false and the reader keeps its last consistent
/// frame. Returns the reader-owned claim record (identity-stable, mutated in
/// place). `dropped` telescopes exactly: sum(dropped) == lastSeq - freshClaims.
const weft_fanout_claim_t* weft_fanout_claim(weft_fanout_reader_t* r);
/// The reader's pre-allocated copy buffer (payload_bytes bytes, stable
/// identity). Meaningful after a fresh claim; read it live before the next
/// claim — the same discipline as the kernel's r_read_slice (A3).
const void* weft_fanout_view(const weft_fanout_reader_t* r);
/// Advisory statistics snapshot (cold path; AXIOM T).
void weft_fanout_reader_stats(const weft_fanout_reader_t* r, weft_fanout_stats_t* out);
/// Heap-allocate + init in one call (calloc; NULL on bad geometry/OOM).
/// Same FFI-finalizer rationale as weft_fanout_new: the reader's copy buffer
/// and the struct must die together, in one call.
weft_fanout_reader_t* weft_fanout_reader_new(const void* ring, size_t ring_bytes,
                                             size_t payload_bytes, unsigned slot_count);
/// weft_fanout_reader_destroy + free the struct. NULL-safe.
void weft_fanout_reader_free(weft_fanout_reader_t* r);