directives/weft-docs-founding/weft-docs/weft/core/c/weft.h

// ---------------------------------------------------------------------------
// Public types
// ---------------------------------------------------------------------------

/// Weft publish result codes.
typedef enum {
    WEFT_PUB_OK              = 0,  // publish succeeded
    WEFT_PUB_DROPPED_REVOKED = 1, // writer has been revoked; publish was a no-op
} weft_pub_result_t;
/// Weft instance — one writer + one reader, three off-heap buffers, one atomic.
///
/// Field access discipline (02 §1):
///   - `buf[3]`: ownership rules below; never read another party's held buffer.
///   - `latest`: SHARED atomic; exchanged by writer (publish) and reader (claim).
///   - `w_work`: WRITER-PRIVATE; only the writer thread reads or writes.
///   - `r_work`: READER-PRIVATE; only the reader thread reads or writes.
///   - `revoked`, `epoch`: shared; see I6 handshake in 02 §6.
///   - `t_*` counters: shared atomic u64; Relaxed fetch_add (telemetry only).
///
/// Buffer layout per buffer (03-ENVELOPE §1 + 02 §1):
///   [0..16)                  envelope (magic, version, header_size, seq, payload_len)
///   [16..16+payload_max)     payload
///   [buf_size-8..buf_size)   canary (u64 LE; value = seq)
typedef struct weft {
    uint8_t* buf[3];                 // 3 buffers, 64-byte aligned
    size_t buf_size;                  // = align64(16 + payload_max + 8, 64)
    size_t payload_max;               // immutable after init

    /// The single shared atomic. Exchanged by writer (publish) and reader (claim).
    /// Init: 0. Memory order: AcqRel on both exchanges (02 §5).
    _Atomic uint32_t latest;

    /// Writer-private working index. Init: 1. Not synchronized (thread-private).
    uint32_t w_work;

    /// Reader-private held index. Init: 2. Not synchronized (thread-private).
    uint32_t r_work;

    /// I6: writer revocation flag. Init: false.
    /// Writer: Relaxed load (advisory). Releaser: Release store. (02 §5)
    _Atomic bool revoked;

    /// I6: writer epoch. Init: 0. Increments on each ACK (post-revocation publish).
    /// Writer: fetch_add AcqRel on ACK. Releaser: Acquire poll. (02 §5, 02 §6)
    _Atomic uint32_t epoch;

    // Telemetry (Relaxed; never synchronization)
    _Atomic uint64_t t_publish;       // incremented after each successful publish
    _Atomic uint64_t t_claim;         // incremented after each claim
    _Atomic uint64_t t_drop;          // incremented on each DROPPED_REVOKED
    _Atomic uint64_t t_wsteps;       // incremented once per protocol RMW in w_publish (L2)
    _Atomic uint64_t t_rsteps;       // incremented once per protocol RMW in r_claim (L3)
} weft_t;
// ---------------------------------------------------------------------------
// Lifecycle
// ---------------------------------------------------------------------------

/// Allocate a Weft with the given payload_max. Returns 0 on success, -1 on
/// alloc failure. Allocates 3 buffers via posix_memalign(64). May allocate
/// (only `init` may; Law 2 — zero is a contract in publish/claim).
int weft_init(weft_t* w, size_t payload_max);
/// Destroy a Weft. Idempotent. Frees nothing that reclaim already released (§6).
/// If `revoke` was never called, plain free is correct (no writer exists).
/// `destroy` without a prior `reclaim` while a writer may still run is a CALLER
/// ERROR — document, don't defend.
void weft_destroy(weft_t* w);
// ---------------------------------------------------------------------------
// Writer (called from the writer thread only)
// ---------------------------------------------------------------------------

/// Get a write cursor for the writer's working buffer. The cursor is a raw
/// pointer to buf[w_work][16..16+payload_max). The writer fills it, then calls
/// `weft_publish`. NOT a snapshot — the live buffer; writes here are visible
/// after the next publish.
uint8_t* weft_w_begin(weft_t* w);
/// Publish the writer's working buffer with the given seq and payload_len.
/// Per 02 §2 + §6:
///   1. if revoked.load(Relaxed): epoch.fetch_add(1, AcqRel); t_drop++;
///      return DROPPED_REVOKED  (checked FIRST, before any byte write)
///   2. write envelope (v1, seq, payload_len) into buf[w_work]
///   3. write canary = seq at buf[w_work].tail
///   4. old = latest.exchange(w_work, AcqRel)   // THE atomic
///   5. w_work = old
///   6. t_publish++; t_wsteps++; return PUB_OK
weft_pub_result_t weft_publish(weft_t* w, uint32_t seq, uint32_t payload_len);
// ---------------------------------------------------------------------------
// Reader (called from the reader thread only)
// ---------------------------------------------------------------------------

/// Claim the freshest published buffer. Per 02 §2:
///   mine = latest.exchange(r_work, AcqRel)   // THE atomic
///   r_work = mine
///   t_claim++; t_rsteps++
///   return mine
/// NEVER fails. Before any publish, returns the null frame (seq=0).
uint32_t weft_r_claim(weft_t* w);
/// Copy LIVE held-buffer bytes at call time. Per A3: the reader must observe
/// the live buffer, never a snapshot taken at claim time. Copies `dst_len`
/// bytes starting at `offset` from buf[r_work] into `dst`. Returns bytes copied
/// (capped at buf_size - offset).
size_t weft_r_read_slice(weft_t* w, uint8_t* dst, size_t offset, size_t dst_len);
// ---------------------------------------------------------------------------
// I6 — writer revocation handshake (02 §6, A1)
// ---------------------------------------------------------------------------

/// Step 1: revoke the writer. Sets revoked.store(true, Release). The writer
/// will observe it on its next publish and ACK via epoch.fetch_add(AcqRel).
void weft_revoke(weft_t* w);
/// Steps 2-3: poll epoch (Acquire) until it advances past the pre-revoke value,
/// bounded by timeout_ms. Returns 0 on ACK received, -1 on timeout.
///
/// After ACK is observed, the caller may poison (memset 0xDE) or free.
/// Poison-before-ACK is the bug this handshake prevents (A1).
int weft_reclaim(weft_t* w, uint32_t pre_revoke_epoch, uint32_t timeout_ms);
// ---------------------------------------------------------------------------
// Telemetry (Relaxed loads; statistics only, never synchronization)
// ---------------------------------------------------------------------------

uint64_t weft_t_publish(weft_t* w);
uint64_t weft_t_claim(weft_t* w);
uint32_t weft_epoch(weft_t* w);